profiel edit form afzonderen

--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,11 @@ input, select, button{
 .inp{
     width:30%;
 }
+
+.rotate180 {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
